--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,3 +1,14 @@
 ---
-# Main Ansible playbook
-# Add your play definitions here
+# site.yml
+
+- name: Configure all hosts
+  hosts: all
+  become: yes
+  roles:
+    - common
+
+- name: Configure web application servers
+  hosts: web_servers
+  become: yes
+  roles:
+    - web_app
