--- a/ansible/roles/web_app/tasks/main.yml
+++ b/ansible/roles/web_app/tasks/main.yml
@@ -1,3 +1,42 @@
 ---
-# Tasks for web_app role
-# Add your web application specific tasks here
+# Web application role tasks
+
+- name: Install web server packages
+  package:
+    name:
+      - nginx
+      - python3
+      - python3-pip
+    state: present
+
+- name: Configure Nginx
+  template:
+    src: nginx.conf.j2
+    dest: /etc/nginx/nginx.conf
+  notify: Restart Nginx
+
+- name: Install Python packages
+  pip:
+    name:
+      - flask
+      - gunicorn
+    state: present
+
+- name: Copy web application files
+  copy:
+    src: "{{ item }}"
+    dest: /opt/web_app/
+  with_fileglob:
+    - "files/*"
+
+- name: Start web application
+  systemd:
+    name: web_app
+    state: started
+    enabled: yes
+
+handlers:
+  - name: Restart Nginx
+    service:
+      name: nginx
+      state: restarted
